bug 239006: Download manager doesn't account for filesize when presenting combined percentages patch by Zbigniew Braniecki <gandalf@firefox.pl>, r=cbiesinger, sr=darin