xpfe/components/download-manager/src/nsDownloadProxy.h
@@ -135,7 +135,17 @@ public:
       return NS_ERROR_NOT_INITIALIZED;
     return mInner->GetPercentComplete(aPercentComplete);
   }
-   
+
+  NS_IMETHODIMP GetAmountTransferred(PRUint64* aAmountTransferred)
+  {
+    return mInner->GetAmountTransferred(aAmountTransferred);
+  }
+
+  NS_IMETHODIMP GetSize(PRUint64* aSize)
+  {
+    return mInner->GetSize(aSize);
+  }
+
   NS_IMETHODIMP GetListener(nsIWebProgressListener** aListener)
   {
     if (!mInner)
